feat(inference-scheduler): add KServe EPP configs and Grafana dashboards
- Add LLM inference service configs (default and prefix-cache)
- Add route, gateway, service monitor, and inference manifests
- Add Grafana dashboards for EPP: routing/load balancing, prefix caching,
  P/D disaggregation, and all-in-one view
- Add Grafana README

--- a/inference_prefix_cache.yaml
+++ b/inference_prefix_cache.yaml
@@ -2,7 +2,7 @@
 apiVersion: serving.kserve.io/v1alpha2
 kind: LLMInferenceService
 metadata:
-  name: gpt-oss-20b-inf-scheduler
+  name: gpt-oss-20b
   namespace: kserve-lab
 spec:
   model:
@@ -13,7 +13,7 @@ spec:
     scheduler: { }
     gateway: { }
   baseRefs:
-    - name: llmisvc-inf-scheduler
+    - name: llmisvc-prefix-caching
   template:
     containers:
       - name: main
